kubernetes/installation/prometheus-operator/alertmanager/alertmanager.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    alertmanager: main
  name: alertmanager-main
  namespace: monitoring
spec:
  type: NodePort
  ports:
  - name: web
    port: 9093
    targetPort: web
    nodePort: 29093
  selector:
    alertmanager: main
    app: alertmanager
