kubernetes/installation/prometheus-operator/alertmanager/alertmanager-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alertmanager-ingress
  namespace: monitoring
spec:
  rules:
  - host: alertmanager.mecby.com
    http:
      paths:
      - path: /
        backend:
            serviceName: alertmanager-main
            servicePort: 9093
